Google Maps API Integration

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 ATLAS_URI = mongodb+srv://a-stupid-user_25:jingEN6542@cluster0.mar0x.mongodb.net/ipanel?retryWrites=true&w=majority  
 LOCAL_URI = 'mongodb://localhost:27017/ipanel'
+GOOGLE_MAPS_API_KEY= AIzaSyBdYEvyzMhz1HuzVnqLoRBNwNiUdMWEe3c
